# rnsittrack2

./: .devready-team.yaml  .gitignore  CHANGELOG.md  GAP_ANALYSIS.md  HealthScore2  PRD.md  README.md  create_simulation.py  main.py  migrate_db.py  patch3.py  patch4.py  patch5.py  pyproject.toml  run_demo.ps1  tech.md  verify_extension_api.py
.github/: copilot-instructions.md
.kiro/: rules.md
devready/operator/: .gitignore  README.md  concurrent_executor.py  config_generator.py  container_factory.py  devcontainer_generator.py  docker_manager.py  dry_run_executor.py  errors.py  fix_applicator.py  fix_parser.py  fix_verifier.py  hook_manager.py  isolation_verifier.py  logging_config.py  mise_generator.py  orchestrator.py  performance_monitor.py  platform_adapter.py  pyproject.toml  resource_cleaner.py  risk_assessor.py  rollback_manager.py  sandbox_executor.py  workspace_mounter.py
devready/operator/hooks/: post_merge.py  pre_commit.py
devready/operator/package_managers/: __init__.py  adapter.py  nodejs.py  other.py  python.py
devready/operator/tests/: conftest.py  setup_test_scenario.py  test_config_generator.py  test_container_factory.py  test_docker_manager.py  test_errors.py  test_fix_and_rollback.py  test_hook_manager.py  test_package_managers.py  test_parser_and_executors.py  test_risk_assessor.py  test_sandbox_executor.py  test_workspace_mounter.py
devready/operator/tests/fixtures/mock-stack/: .mise.toml  package.json
devready/operator/tests/integration/: test_e2e_workflow.py
devready/operator/tests/performance/: test_performance.py
(+181 files in other folders)
