[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devready*"]

[project]
name = "devready-daemon"
version = "1.0.0"
description = "DevReady Architect - Core API & Data State Daemon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.0",
    "sqlmodel>=0.0.16",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.20.0",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "slowapi>=0.1.9",

    "python-on-whales>=0.70.0",
    "gitpython>=3.1.0",
    "osquery>=3.0.0",
    "sh>=2.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "anyio>=4.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
